--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Styles/style.css">
-    <title>Document</title>
+    <title>Apptastico</title>
 </head>
 <body>
     <header>
         <img src="src/images/logo.png" alt="">
         <nav>
-            <ul>
-                <li class="navList">Home</li>
-                <li class="navList">About</li>
-                <li class="navList">Work</li>
-                <li class="navList">contact</li>
+            <ul class="navList">
+                <li>Home</li>
+                <li>About</li>
+                <li>Work</li>
+                <li>contact</li>
             </ul>
         </nav>
     </header>
@@ -25,7 +25,9 @@
             <p class="T1">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Num <br>quam recusandae provident voluptas neque</p>
             <p class="T2"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam <br> quidem et, est dolores suscipit minus nesciunt pariatur <br>culpa accusamus doloremque quos dolorem.</p>
             <div class="botonOlink">
+                <div>
                 <button>Request a quote</button>
+                </div>
                 <p> or </p>
                 <img class="minicompu" src="src/images/shape01.png" alt="">
                 <a href="">See our recent work</a>
@@ -45,7 +47,9 @@
             <img src="src/images/img1.png" alt="">
             <h2>Solid development</h2>
             <p>Lorem ipsum, dolor sit amet. eius, necessitatibus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet saepe.</p>
+            <div>
             <button>Read more</button>
+            </div>
         </div>
         <div>
             <img src="src/images/img2.png" alt="">
